# salsa

./: .gitignore  Cargo.toml  Makefile  README.md  install.sh
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/parallel/: Cargo.toml
crates/parallel/scripts/: test_this.sh
crates/parallel/src/: main.rs
