[package]
name = "parallel"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
anyhow = "1.0.75"
async-process = "1.8.1"
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }
libc = "0.2"
nix = { version = "0.27.1", features = ["signal", "process"] }
shell-escape = "0.1.5"
